feat: credential options routes
